--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Mon site
 markdown: kramdown
-baseurl: "/les-doigts-qui-dansent-bal-folk"
+url: "https://les-doigts-qui-dansent.fr"
+baseurl: ""
 
